# gpt2-jax

./: .gitignore  .nojekyll  GPT2.ipynb  GPT2_for_XTTS.ipynb  README.md  TrainGPT.ipynb  gpt2-inference.ipynb  pyproject.toml  requirements.txt  train_gpt.py
assets/: bib.bibtex
src/: __init__.py  model.py  trainer.py
