[project]
name = "gpt2-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "equinox>=0.11.11",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "jax[cuda]>=0.5.0",
    "optax>=0.2.4",
    "pykernel>=0.1.6",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.5.1",
    "transformers>=4.48.1",
]
